<resources>
  <string name="app_name">BuyMoreStuff</string>
  <string name="product_name">Product Name</string>
  <string name="submitted">Yay it submitted correctly!</string>
  <string name="put_a_product_name_here">Put a product name here</string>
  <string name="submit">Submit</string>
  <string name="profile_image">Profile Image</string>
  <string name="now_ordering">Now Ordering!</string>
  <string name="order">Order</string>
  <string name="no_product_name">No product name specified!</string>
  <string name="nickname">Nickname</string>
  <string name="user_settings">User Settings</string>
  <string name="your_nickname_goes_here">Your nickname goes here</string>
  <string name="save">Save</string>
  <string name="nickname_with_input">Nickname: %1$s</string>
  <string name="add_a_description">Add a description</string>
  <string name="add_product">Add Product</string>
  <string name="description">Description</string>
  <string name="product_category">Product Category</string>
  <string name="pick_a_category">Pick A Category</string>
  <string name="settings_icon">Settings Icon</string>
  <string name="contact_person">Contact Person</string>
  <string name="edit_product">Edit Product</string>
  <string name="name">Name</string>
  <string name="contact">Contact</string>
  <string name="category">Category</string>
  <string name="delete_product">Delete Product</string>
  <string name="product_name_goes_here">Product Name goes here</string>
  <string name="pick_a_contact">Pick a contact</string>
  <string name="type_a_description">Type a description</string>
  <string name="type_a_name">Type a name</string>
  <string name="log_in">Log In</string>
  <string name="textview">TextView</string>
  <string name="username">Username</string>
  <string name="password">Password</string>
  <string name="sign_up">Sign Up</string>
  <string name="verification_code">Verification Code</string>
  <string name="verify">Verify</string>
  <string name="verify_account">Verify Account</string>
  <string name="log_out">Log Out</string>
  <string name="add_image">Add Image</string>
  <string name="delete_image">Delete Image</string>
  <string name="image">Image</string>
    <string name="speak">Speak</string>
    <string name="interstitial_ad">Interstitial Ad</string>
  <string name="rewarded_ad">Rewarded Ad</string>
</resources>
