<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/addProductActivity"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".activity.AddProductActivity">

  <TextView
    android:id="@+id/addProductActivityTitleTextView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="28dp"
    android:layout_marginTop="32dp"
    android:text="@string/add_product"
    android:textSize="24sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/addProductProductNameTextView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="28dp"
    android:layout_marginTop="40dp"
    android:text="@string/product_name"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/addProductActivityTitleTextView" />

  <EditText
    android:id="@+id/addProductProductNameEditText"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="172dp"
    android:autofillHints=""
    android:ems="10"
    android:hint="@string/put_a_product_name_here"
    android:inputType="textPersonName"
    android:minHeight="48dp"
    android:textColorHint="#757575"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="@+id/addProductProductNameTextView"
    app:layout_constraintTop_toBottomOf="@+id/addProductProductNameTextView" />

  <TextView
    android:id="@+id/addProductProductDescriptionTextView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="28dp"
    android:layout_marginTop="24dp"
    android:text="@string/description"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/addProductProductNameEditText" />

  <EditText
    android:id="@+id/addProductProductDescriptionEditText"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="28dp"
    android:autofillHints=""
    android:ems="10"
    android:hint="@string/add_a_description"
    android:inputType="textPersonName"
    android:minHeight="48dp"
    android:textColorHint="#757575"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/addProductProductDescriptionTextView" />

  <Spinner
    android:id="@+id/addProductProductCategorySpinner"
    android:layout_width="370dp"
    android:layout_height="48dp"
    android:layout_marginStart="28dp"
    android:contentDescription="@string/pick_a_category"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/addProductProductCategoryTextView" />

  <TextView
    android:id="@+id/addProductProductCategoryTextView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="28dp"
    android:layout_marginTop="20dp"
    android:text="@string/product_category"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/addProductProductDescriptionEditText" />

  <Button
    android:id="@+id/saveProductButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="28dp"
    android:layout_marginTop="65dp"
    android:text="@string/save"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/addProductContactSpinner" />

  <Spinner
    android:id="@+id/addProductContactSpinner"
    android:layout_width="354dp"
    android:layout_height="48dp"
    android:layout_marginStart="28dp"
    android:contentDescription="@string/pick_a_contact"
    android:minHeight="48dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView2" />

  <TextView
    android:id="@+id/textView2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="28dp"
    android:layout_marginTop="16dp"
    android:text="@string/contact_person"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/addProductProductCategorySpinner" />
</androidx.constraintlayout.widget.ConstraintLayout>
