<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/signupActivity"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".activity.SignupActivity">

  <TextView
    android:id="@+id/signupTextView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="16dp"
    android:text="@string/sign_up"
    android:textSize="24sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/signupUsernameTextView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="24dp"
    android:layout_marginTop="32dp"
    android:text="@string/username"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/signupTextView" />

  <TextView
    android:id="@+id/signupPasswordTextView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="24dp"
    android:layout_marginTop="56dp"
    android:text="@string/password"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/signupUsernameTextView" />

  <EditText
    android:id="@+id/signupUsernameEditText"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:autofillHints=""
    android:ems="10"
    android:hint="@string/username"
    android:inputType="textEmailAddress"
    android:minHeight="48dp"
    android:textColorHint="#757575"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.062"
    app:layout_constraintStart_toEndOf="@+id/signupUsernameTextView"
    app:layout_constraintTop_toBottomOf="@+id/signupTextView"
    tools:ignore="DuplicateSpeakableTextCheck" />

  <EditText
    android:id="@+id/signupPasswordEditText"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="24dp"
    android:autofillHints=""
    android:ems="10"
    android:hint="@string/password"
    android:inputType="textPassword"
    android:minHeight="48dp"
    android:textColorHint="#757575"
    app:layout_constraintStart_toEndOf="@+id/signupPasswordTextView"
    app:layout_constraintTop_toBottomOf="@+id/signupUsernameEditText"
    tools:ignore="DuplicateSpeakableTextCheck" />

  <Button
    android:id="@+id/signupSubmitButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="24dp"
    android:layout_marginTop="48dp"
    android:text="@string/submit"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/signupPasswordTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>
